--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: install_cunit_ubuntu
       run: sudo apt-get install libcunit1 libcunit1-doc libcunit1-dev
+    - name: install valgrind
+      run: sudo apt-get install valgrind
     - name: Run unit tests
       run: make test
     - name: Memory test
